# SEO-Hunter

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  run.sh  setup.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/ui/: AuditReportModal.jsx  PriorityBadge.jsx  Toast.jsx
frontend/src/hooks/: useBusinesses.js
frontend/src/tabs/: ClientsTab.jsx  DatabaseTab.jsx  DiscoverTab.jsx
src/: apify_scraper.py  auditor.py  database.py  exporter.py  monitor.py  osm_prospector.py  prospector.py  scorer.py
static/: app.js  index.html  style.css
static/assets/: index-BkVuqTlQ.css  index-BtODghFt.js  index-C1Lc1oW3.css  index-CDnhSheG.css  index-CX_4a9e5.js  index-D25AkD10.js  index-DocGHXEq.css  index-Dr_Q-h3v.js  index-Ds3DJsoy.css  index-DyixhNP0.js
templates/: cold_call_script.txt  outreach_email.txt
