[project]
name = "sitecp"
version = "0.1.0"
description = "Find local businesses with outdated websites and generate a qualified outreach pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "certifi>=2022.12.7",
    "urllib3>=1.26.0",
    "schedule>=1.2.0",
    "tabulate>=0.9.0",
    "extruct>=0.17.0",
    "w3lib>=2.1.2",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0.0",
]

[project.scripts]
sitecp = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
